--- a/provision.yml
+++ b/provision.yml
@@ -1,25 +1,37 @@
 ---
 - hosts: all
+
+  handlers:
+    - name: restart httpd
+      service:
+        name: httpd
+        state: restarted
+      become: yes
+
   tasks:
     - name: 'Instala pacotes do Sistema Operacional'
       yum:
         name: ['httpd', 'mod_ssl', 'curl', 'tcpdump', 'telnet', 'wget','mysql-server','python36-mysql','python2-PyMySQL']
         state: latest
       become: yes
+
     - name: 'Instala pacotes do PHP'
       yum:
         name: ['php56w', 'php56w-gd', 'php56w-mcrypt','php56w-mysql']
         state: latest
       become: yes
+
     - name: 'Start serviços'
       service:
         name: httpd
-        state: restarted
+        state: started
+
     - name: 'Cria o banco do MySQL'
       mysql_db:
         name: wordpress_db
         login_user: root
         state: present
+
     - name: 'Cria o usuário do MySQL'
       mysql_user:
         login_user: root
@@ -28,3 +40,40 @@
         priv: 'wordpress_db.*:ALL'
         state: present
 
+    - name: 'Baixa o arquivo de instalação do Wordpress'
+      get_url:
+        url: 'https://wordpress.org/latest.tar.gz'
+        dest: '/tmp/wordpress.tar.gz'
+
+    - name: 'Descompacta o wordpress'
+      unarchive:
+        src: '/tmp/wordpress.tar.gz'
+        dest: /var/www/
+        remote_src: yes
+      become: yes
+   
+    - name: 'Copia o arquivo wp-config.php'
+      copy:
+        src: '/var/www/wordpress/wp-config-sample.php'
+        dest: '/var/www/wordpress/wp-config.php'
+        remote_src: yes
+      become: yes
+
+    - name: 'Configura o wp-config com as entradas do banco de dados'     
+      replace:
+        path: '/var/www/wordpress/wp-config.php'
+        regexp: "{{ item.regex }}"
+        replace: "{{ item.value }}"
+      with_items:
+        - { regex: 'database_name_here', value: 'wordpress_db'}
+        - { regex: 'username_here', value: 'wordpress_user'}
+        - { regex: 'password_here', value: '12345'}
+      become: yes
+
+    - name: 'Configura Apache para servir o Wordpress'
+      copy:
+        src: 'files/wordpress.conf'
+        dest: '/etc/httpd/conf.d/wordpress.conf'
+      become: yes
+      notify:
+        - restart httpd
