--- a/provision.yml
+++ b/provision.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: wordpress
 
   handlers:
     - name: restart httpd
@@ -28,16 +28,16 @@
 
     - name: 'Cria o banco do MySQL'
       mysql_db:
-        name: wordpress_db
+        name: "{{ wp_db_name }}"
         login_user: root
         state: present
 
     - name: 'Cria o usuário do MySQL'
       mysql_user:
         login_user: root
-        name: wordpress_user
-        password: 12345
-        priv: 'wordpress_db.*:ALL'
+        name: "{{ wp_username }}"
+        password: "{{ wp_user_password }}"
+        priv: "{{ wp_db_name }}.*:ALL"
         state: present
 
     - name: 'Baixa o arquivo de instalação do Wordpress'
@@ -54,20 +54,20 @@
    
     - name: 'Copia o arquivo wp-config.php'
       copy:
-        src: '/var/www/wordpress/wp-config-sample.php'
-        dest: '/var/www/wordpress/wp-config.php'
+        src: '{{ wp_installation_dir }}/wp-config-sample.php'
+        dest: '{{ wp_installation_dir }}/wp-config.php'
         remote_src: yes
       become: yes
 
     - name: 'Configura o wp-config com as entradas do banco de dados'     
       replace:
-        path: '/var/www/wordpress/wp-config.php'
+        path: '{{ wp_installation_dir }}/wp-config.php'
         regexp: "{{ item.regex }}"
         replace: "{{ item.value }}"
       with_items:
-        - { regex: 'database_name_here', value: 'wordpress_db'}
-        - { regex: 'username_here', value: 'wordpress_user'}
-        - { regex: 'password_here', value: '12345'}
+        - { regex: 'database_name_here', value: "{{ wp_db_name }}"}
+        - { regex: 'username_here', value: "{{ wp_username }}"}
+        - { regex: 'password_here', value: '{{ wp_user_password }}'}
       become: yes
 
     - name: 'Configura Apache para servir o Wordpress'
